--- a/src/views/showBigScreen/bimfacetest/demo1087.html
+++ b/src/views/showBigScreen/bimfacetest/demo1087.html
@@ -60,7 +60,7 @@
         <div class='model' id="domId"></div>
     </div>
     <script type="text/javascript">
-        let viewToken = 'aa06be3f22f245468a0dc17c5a78ec67';
+        let viewToken = 'd6261eac011945be9b1b85938e03b919';
         // 声明Viewer及App
         let viewer3D;
         let app;
@@ -126,7 +126,7 @@
             }
             viewer3D.loadModel({
                 // 待加载模型的浏览凭证
-                viewToken: "6c97b5d4700d46f5810b8c48af7d6a00",
+                viewToken: "58713f304f5a4812a81019405421ba41",
                 // 自定义模型ID，默认为文件ID
                 modelId: modelId_2
             });
@@ -139,9 +139,9 @@
             if (!viewAdded || !isModelAdded) {
                 return;
             }
-            model3D.setModelTranslation({ x: 10000, y: 0, z: 0 });
+            model3D.setModelTranslation({ x: 10000, y: 1000, z: 10000 });
             console.log("modelId_2:" , viewer3D);
-            //删除场景
+            // //删除场景
             viewer3D.removeModel(modelId_2);
              isModelAdded = false;
             viewer3D.render();
